# mirror

./: .gitignore  AGENTS.md  CHANGELOG.md  CLI_AI_REPORT.md  CLI_REPORT.md  Cargo.toml  DOCS_REPORT.md  Justfile  LICENSE.md  MIRROR_RUNTIME_REPORT.md  PRACTICE.md  README.md  RESULTS.md  ROADMAP.md  SPRING_CLEAN_REPORT.md  abyss.weights  bootstrap.conv  bootstrap.mirror  flake.nix  main.conv  mirror.shatter  mirror.spec  mirror.weights  spec.mirror  systemic.engineering.conv
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
beam/: gleam.toml  manifest.toml
benches/: mirror.rs
boot/: 00-form.mirror  00-form.mirror.shatter  00-main.conv  00-prism.mirror  01-lens.conv  01-meta.mirror  01-meta.shatter  01-prism.mirror  01-type.conv  01a-meta-action.mirror  01a-meta-actor.mirror  01c-meta-io.mirror  02-code.mirror  02-shatter.mirror  02-test.conv  02-type.mirror  02a-code-rust.mirror  03-actor.conv  03-actor.mirror  03-boundary.mirror  03-code.mirror  03-lens.mirror  03a-code-rust.mirror  03b-code-gleam.mirror  04-action.mirror  04-lens.mirror  04-test.conv  04a-runtime.mirror  05-property.mirror  05-property.shatter  06-mirror.mirror  06-package.mirror  06-topology.conv  06a-package-git.mirror  06b-package-spec.mirror  07-projection.conv  08-git.mirror  09-package.mirror  10-mirror.mirror  15-time.mirror  (+2 more)
boot.backup/: 01-lens.mirror  03-beam.conv  03-mail.conv  04-nix.conv  05-property.mirror  06-ai.mirror  06-coincidence.conv
conv/: actor.conv  admin.conv  ai.conv  ca.conv  ci.conv  coincidence.conv  compiler.conv  fate.conv  git.conv  mail.conv  nix.conv  prism.conv  projection.conv
conversation/: Cargo.toml  main.mirror
docs/: ca-merge-plan.md  emergent-holonomy-compiler.md  first-ca-task.md  gutter.md  identity-keys-spec.md  mirror.md  sel-2-garden.md  shatter-spec.md  spectral-tomography.md  theoretical-iso-survey.md  visibility-crypto.md  witnessed-computation.md
extracted/: artifact.rs  ffi.rs  property_pipeline.rs  runtime_test.rs
fixtures/: additive.conv  additive.mirror  commit-from-main-to-test.mirror  coverage-on-last-3-main-commits.mirror  fate.bf  grammar.conv  json.mirror
metal/: prism.metal
prism/: actor.mirror  admin.mirror  ai.mirror  ca.mirror  ci.mirror  cogito.mirror  gestalt.mirror  language.mirror  observation.mirror  projection.mirror  reality.mirror
src/: abyss.rs  actor.rs  artifact.rs  ast.rs  ast.rs.backup  ast_prism.rs  boot.rs  bounded.rs  bundle.rs  check.rs  classifier.rs  cli.rs  compile.rs  conv.rs  db.rs  declaration.rs  dispatch.rs  domain.rs  domain_dispatch.rs  eigentest.rs  emit.rs  emit_code.rs  emit_rust.rs  extension.rs  features.rs  ffi.rs  filter.rs  generate.rs  generate_crate.rs  generated.rs  gestalt.rs  ghost.rs  git_prism.rs  git_store.rs  gradient.rs  identity.rs  kernel.rs  lambda_phases.rs  lib.rs  logic.rs  (+27 more)
tasks/: coverage-100.md
tests/: abyss_meta.rs  basis.rs  butterfly.rs  cli.rs  (+23 more)
(+175 files in other folders)
