[workspace]
members = [".", "beam/native/conversation_nif"]

[package]
name = "conversation"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE.md"
description = "Traceables over trees"

[lib]
crate-type = ["lib"]

[features]
default = []
git = ["fragmentation/git", "dep:git2", "dep:ssh-key"]
slow = []
spectral = []  # kept for backward compat; coincidence is now always required

[dependencies]
fragmentation = { path = "../fragmentation" }
coincidence = { path = "../coincidence" }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
age = { version = "0.11", features = ["ssh"] }
base64 = "0.22"
eetf = "0.11"
git2 = { version = "0.19", optional = true }
ssh-key = { version = "0.6", features = ["std", "ed25519", "crypto"], optional = true }
ractor = "0.15"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
