[workspace]
members = [".", "beam/native/conversation_nif"]

[package]
name = "abyss"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE.md"
description = "fold | prism | traversal | lens | iso — the five optic operations"

[lib]
crate-type = ["lib"]

[[bin]]
name = "conversation"
path = "src/main.rs"

[features]
default = []
git = ["dep:ssh-key"]
db = ["git"]
slow = []
spectral = []  # kept for backward compat; coincidence is now always required

[dependencies]
prism = { path = "../prism" }
fragmentation = { path = "../fragmentation" }
fragmentation-git = { path = "../fragmentation-git" }
coincidence = { path = "../coincidence" }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
age = { version = "0.11", features = ["ssh"] }
base64 = "0.22"
eetf = "0.11"
git2 = "0.19"
ssh-key = { version = "0.6", features = ["std", "ed25519", "crypto"], optional = true }
futures = "0.3"
ractor = "0.15"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
