[workspace]
members = ["."]

[package]
name = "mirror"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE.md"
description = "fold | prism | traversal | lens | iso — the thing you look into that looks back"

[lib]
crate-type = ["lib"]

[[bin]]
name = "mirror"
path = "src/main.rs"

[features]
default = []
git = ["dep:ssh-key"]
db = ["git"]
slow = []
spectral = []  # kept for backward compat; coincidence is now always required

[dependencies]
prism = { path = "../prism" }
fragmentation = { path = "../fragmentation" }
fragmentation-git = { path = "../fragmentation-git" }
coincidence = { path = "../coincidence" }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
age = { version = "0.11", features = ["ssh"] }
base64 = "0.22"
eetf = "0.11"
git2 = "0.19"
ssh-key = { version = "0.6", features = ["std", "ed25519", "crypto"], optional = true }

[dev-dependencies]
tempfile = "3"
